--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
     <h1>Shani Kim</h1>
     <img
-      src="./Images/Skype_Picture_2022_09_15T02_41_04_523Z.jpg"
+      src="./Images/profile picture.jpg"
       alt="My profile picture"
       width="120"
       height="120"
